--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Memory Game Project</title>
+    <title>Pirate Match</title>
   </head>
   <body>
     <noscript></noscript>
